# ai-backend

./: .editorconfig  .env.example  .gitignore  Dockerfile  LICENSE  README.md  compose.yml  justfile  main.py  pyproject.toml  requirements.txt  shell.nix
.github/: .pull_request_template.md  FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  enhancement_request.md  feature_request.md
.github/workflows/: codeql.yml  release.yml
apps/api/: pyproject.toml
apps/api/src/: main.py
apps/api/src/internal/: models.py  query.py
apps/api/src/routers/: health.py  image.py  message.py  model.py
apps/api/src/types/: alias.py  requests.py
apps/api/tests/assets/: test_images_base64.json
apps/api/tests/routers/: test_image.py  test_message.py
apps/cli/: pyproject.toml
apps/cli/src/: main.py  setup.py
docs/: package.json
docs/src/: index.md
docs/src/.vitepress/: config.ts
examples/web-nuxt/: app.config.ts  app.vue  eslint.config.mjs  nuxt.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
examples/web-nuxt/app/: app.config.ts
examples/web-nuxt/app/components/ui/: SideNavigation.vue  ThemeButton.vue
examples/web-nuxt/app/components/ui/chat/: ChatWindow.vue
examples/web-nuxt/app/components/ui/prose/: ProseA.vue  ProseH3.vue  ProseP.vue  ProseTable.vue  ProseTd.vue  ProseTh.vue  ProseUl.vue
examples/web-nuxt/app/composables/: useStream.ts
examples/web-nuxt/app/pages/: settings.vue
examples/web-nuxt/components/ui/: SideNavigation.vue  ThemeButton.vue
examples/web-nuxt/components/ui/chat/: ChatHeader.vue  ChatInput.vue  ChatMessage.vue  ChatWindow.vue
examples/web-nuxt/components/ui/prose/: ProseBlockquote.vue  ProseH1.vue  ProseH2.vue  ProseLi.vue  ProseOl.vue  ProseTr.vue
examples/web-nuxt/composables/: useChat.ts  useStream.ts
examples/web-nuxt/layouts/: default.vue
examples/web-nuxt/pages/: index.vue  settings.vue
examples/web-nuxt/types/: model.ts
src/: main.py
src/internal/: models.py  queries.py  query.py
src/routers/: image.py  message.py  model.py
src/types/: requests.py
tests/assets/: test_images.json
tests/routers/: test_image.py  test_message.py
