[tool.poetry]
name = "ai-backend"
version = "0.4.1"
description = "ai backend"
package-mode = false
authors = [
  "Dino Kupinic"
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ruff = ">=0.11.2,<0.12.0"
pytest = ">=8.3.5,<9.0.0"
mypy = ">=1.15.0,<2.0.0"
mypy-extensions = ">=1.0.0,<2.0.0"

[tool.poetry.extras]
api = ["api"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
