[tool.poetry]
name = "ai-backend"
version = "0.5.5"
description = "ai backend"
package-mode = false
authors = [
  "Dino Kupinic"
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ruff = ">=0.11.2,<0.13.0"
pytest = ">=8.3.5,<9.0.0"
mypy = ">=1.15.0,<2.0.0"
mypy-extensions = ">=1.0.0,<2.0.0"

[tool.poetry.group.dev.dependencies]
python-semantic-release = "^10.2.0"

[tool.semantic_release]
version_toml = ["pyproject.toml:tool.poetry.version"]
branch = "main"
allow_zero_version = true
major_on_zero = false
upload_to_pypi = false
upload_to_release = true
changelog_file = "CHANGELOG.md"
build_command = ""

[tool.poetry.extras]
api = ["api"]
cli = ["cli"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
